--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,9 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script src="https://kit.fontawesome.com/5cb49d1048.js" crossorigin="anonymous"></script>
 </head>
-<body>
+<body class="bg-gray-300">
   <app-root></app-root>
 </body>
 </html>
