disenio del dropdown del usuario e idiomas que estan en el header

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <script src="https://kit.fontawesome.com/5cb49d1048.js" crossorigin="anonymous"></script>
 </head>
-<body class="bg-gray-300">
+<body>
   <app-root></app-root>
 </body>
 </html>
